--- a/src/Styles.module.css
+++ b/src/Styles.module.css
@@ -17,7 +17,7 @@
   row-gap: 15px;
   flex-direction: column;
   padding: 100px var(--glob-padding);
-  background-image: url(./components/Images/village-g208d94a36_640.jpg);
+  background-image: url(./components/Images/bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
